--- a/src/app/age/title-box/title-box.component.html
+++ b/src/app/age/title-box/title-box.component.html
@@ -5,8 +5,8 @@
             <div class="col-lg-12">
                 <h2>Shop</h2>
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Shop</li>
+                    <li class="breadcrumb-item"><a href="#">TRANG CHỦ</a></li>
+                    <li class="breadcrumb-item active"></li>
                 </ul>
             </div>
         </div>
